# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 2020-02-13 - SK - v.1.1.9
              - SL - v.1.0.9
              - NL - v.1.0.8
### Changed
- Fixed user area problem passing language to endpoints (#816)

## 2020-02-11 - SK - v.1.1.8
### Changed
- Incorrect mail address in support area (#780)
- Fixed zoom map (#784)
- Fixed language selection (#787)

## 2020-01-28 - SL - v.1.0.8
### Changed
- Fixed Slovenian language selection (#690)

## 2020-01-10 - NL - v.1.0.7
### Changed
- Updated translation for invalid_driver_license_login_alert (#605)

## 2020-01-02 - SK - v.1.1.7
              - SL - v.1.0.6
              - NL - v.1.0.6
### Changed
- Google Maps APIkey bug fix (#510)
- Updated disableReason_EndPoint for SK and SL

## 2020-01-02 - SK - v.1.1.6
### Changed
- Incorrect minutes indication key (#496)

## 2019-12-23 - NL - v.1.0.5
### Changed
- Fix GoogleMaps API key (#519)

## 2019-12-23 - SK - v.1.1.5
### Changed
- Fix GoogleMaps API key (#515)

## 2019-12-23 - SL - v.1.0.6
### Changed
- Fix GoogleMaps API key (#510)

## 2019-12-18 - SL - v.1.0.5
### Changed
- Fix translations (#476)

## 2019-12-18 - SK - v.1.1.4(1)  
### Changed
- Fix translations (#472)

## 2019-12-02 - SK - v.1.1.4
              - NL - v.1.0.4
              - SL - v.1.0.4
### Changed
- Fix bug basic rate (#341)

## [1.0.4] - 2019-11-29
### Changed
- SL: changed app name (#351)

## [1.0.3] - 2019-11-15
### Changed
- SL: updated translations

## [1.0.3] - 2019-11-11
### Changed
- hidden app tutorial

## [1.0.3] - 2019-09-30
### Changed
- migration to swift5

## [1.0.3] - 2019-09-24
### Changed

- added SL version