@@ -99,10 +99,10 @@ public final class SettingsViewModel : ListViewModelType, ViewModelTypeSelectabl
             settings.append(item)
         }
         if(Config().language == "it"){
-        let settingItem1 = Setting(title: "lbl_settingsCities", icon: "ic_imposta_citta", viewModel: ViewModelFactory.settingsCities())
-        settings.append(settingItem1)
-        let settingItem2 = Setting(title: "lbl_settingsFavourites", icon: "ic_imposta_indirizzi", viewModel: ViewModelFactory.noFavourites())
-        settings.append(settingItem2)
+            //let settingItem1 = Setting(title: "lbl_settingsCities", icon: "ic_imposta_citta", viewModel: ViewModelFactory.settingsCities())
+            //settings.append(settingItem1)
+            let settingItem2 = Setting(title: "lbl_settingsFavourites", icon: "ic_imposta_indirizzi", viewModel: ViewModelFactory.noFavourites())
+            settings.append(settingItem2)
         }
         let settingItem3 = Setting(title: "lbl_settingsLanguages", icon: "ic_imposta_lingua", viewModel: ViewModelFactory.settingsLanguages())
         settings.append(settingItem3)
